--- a/avt_verkehrszaehlstellen_pub/build.gradle
+++ b/avt_verkehrszaehlstellen_pub/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAvtVerkehrszaehlstellen'
 
 task transferAvtVerkehrszaehlstellen(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('avt_verkehrszaehlstellen_pub_verkehrszhlstllen_verkehrszaehlstelle.sql',
