--- a/arp_richtplan_modellaenderung/build.gradle
+++ b/arp_richtplan_modellaenderung/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'exportRichtplanDaten'
+defaultTasks 'transferArpRichtplan'
 
 task transferArpRichtplan(type: Db2Db){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
