DbUri im build.gradle angepasst. Geaendert auf Edit-DB

--- a/awjf_seltene_baeume_pub/build.gradle
+++ b/awjf_seltene_baeume_pub/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAwjfJagd'
 
 task transferAwjfJagd(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('awjf_seltene_baeume.sql', 'awjf_seltene_baeume_pub.seltene_baumarten_seltene_baumarten', true),
