--- a/awjf_seltene_baeume_pub/build.gradle
+++ b/awjf_seltene_baeume_pub/build.gradle
@@ -3,9 +3,9 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAwjfJagd'
+defaultTasks 'transferAwjfSelteneBaeume'
 
-task transferAwjfJagd(type: Db2Db){
+task transferAwjfSelteneBaeume(type: Db2Db){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
