use objektname instead of ingeso_oid/nummer because of changes in the model (attribut nummer was removed)

--- a/afu_geotope/build.gradle
+++ b/afu_geotope/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAfuGeotopeLithostratigraphie', 'transferAfuGeotope'
 
 task generateZustaendigeStelle(type: Db2Db){
-    sourceDb = [dbUriPub, dbUserPub, dbPwdPub]
-    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     transferSets = [
             new TransferSet('afu_geotope_geotope_zustaendige_stelle.sql', 'afu_geotope.geotope_zustaendige_stelle',
                     true)
@@ -15,8 +15,8 @@ task generateZustaendigeStelle(type: Db2Db){
 }
 
 task transferAfuGeotopeBasic(type: Db2Db){
-    sourceDb = [dbUriPub, dbUserPub, dbPwdPub] //[dbUriSogis, dbUserSogis, dbPwdSogis]
-    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     transferSets = [
             new TransferSet('afu_geotope_geotope_aufschluss.sql', 'afu_geotope.geotope_aufschluss', true), //Query bei geologisches System korrigieren
             new TransferSet('afu_geotope_geotope_erratiker.sql', 'afu_geotope.geotope_erratiker', true),
@@ -31,8 +31,8 @@ task transferAfuGeotopeBasic(type: Db2Db){
 }
 
 task transferAfuGeotopeRelations(type: Db2Db){
-    sourceDb = [dbUriPub, dbUserPub, dbPwdPub] //[dbUriSogis, dbUserSogis, dbPwdSogis]
-    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     transferSets = [
             new TransferSet('afu_geotope_geotope_aufschluss_fachbereich.sql',
                     'afu_geotope.geotope_aufschluss_fachbereich', true),
@@ -71,8 +71,8 @@ task transferAfuGeotope {
 
 
 task transferAfuGeotopeGeologischesSystem(type: Db2Db){
-    sourceDb = [dbUriPub, dbUserPub, dbPwdPub] //[dbUriSogis, dbUserSogis, dbPwdSogis]
-    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     transferSets = [
             new TransferSet('afu_geotope_lithostratigrphie_geologisches_system.sql',
                     'afu_geotope.lithostratigrphie_geologisches_system', true)
@@ -80,8 +80,8 @@ task transferAfuGeotopeGeologischesSystem(type: Db2Db){
 }
 
 task transferAfuGeotopeGeologischeSerie(type: Db2Db){
-    sourceDb = [dbUriPub, dbUserPub, dbPwdPub] //[dbUriSogis, dbUserSogis, dbPwdSogis]
-    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     transferSets = [
             new TransferSet('afu_geotope_lithostratigrphie_geologische_serie.sql',
                     'afu_geotope.lithostratigrphie_geologische_serie', true)
@@ -89,8 +89,8 @@ task transferAfuGeotopeGeologischeSerie(type: Db2Db){
 }
 
 task transferAfuGeotopeGeologischeStufe(type: Db2Db){
-    sourceDb = [dbUriPub, dbUserPub, dbPwdPub] //[dbUriSogis, dbUserSogis, dbPwdSogis]
-    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     transferSets = [
             new TransferSet('afu_geotope_lithostratigrphie_geologische_stufe.sql',
                     'afu_geotope.lithostratigrphie_geologische_stufe', true)
@@ -98,8 +98,8 @@ task transferAfuGeotopeGeologischeStufe(type: Db2Db){
 }
 
 task transferAfuGeotopeGeologischeSchicht(type: Db2Db){
-    sourceDb = [dbUriPub, dbUserPub, dbPwdPub] //[dbUriSogis, dbUserSogis, dbPwdSogis]
-    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     transferSets = [
             new TransferSet('afu_geotope_lithostratigrphie_geologische_schicht.sql',
                     'afu_geotope.lithostratigrphie_geologische_schicht', true)
