changed gretl-job awjf_forstreviere from Sogis to Edit-DB

--- a/awjf_forstreviere_pub/build.gradle
+++ b/awjf_forstreviere_pub/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAwjfForstreviere'
 
 task transferAwjfForstreviere(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('awjf_forstreviere_pub_forstreviere_forstrevier.sql',
